New in v1.1.13 (????/??/??)
---------------------------

Fix symlink behavior when filesystem is mounted via CIFS. Closes
Savannah bug #20342. (Andrew Ferguson)

Fix "too many open files" bug when handling large directories. Patch
from Anonymous in Savannah bug #20528.

New options: --tempdir and --remote-tempdir. The first one sets the
directory that rdiff-backup uses for temporary files on the local system.
The second adds the --tempdir option with the given path when invoking
rdiff-backup on remote systems. (Andrew Ferguson)

Don't run the extended attributes test if rdiff-backup is run with
the --no-eas option. Prevents hang in isolated cases. (Andrew Ferguson)

Don't throw an error when clearing extended attributes if they are not
supported on the file. (Andrew Ferguson)


New in v1.1.12 (2007/07/12)
---------------------------

Use .dll as library file extension on Cygwin and Windows. (Andrew Ferguson)

Avoid setting permissions to 000 because they're out of sync. (Andrew Ferguson)

listxattr() can also throw EPERM error if not supported. (Andrew Ferguson)

Do something sensible if we get an IOError while trying to appropriately
log another exception. (Andrew Ferguson)

Handle exception when get permission denied on a file while trying
to establish case sensitivity on read-only side. (Andrew Ferguson)

Finally solve AttributeError due to no 'inc_compressed' attribute
that occured during some regress operations. (Andrew Ferguson)

Squash bug where --check-destination-dir or regress operation failed
after crash when --force option was not used. RPath's are now
properly pickled. (Andrew Ferguson)

Workaround for tempfile.TemporaryFile() having different behavior
on Windows/Cygwin. (Andrew Ferguson)

Make --check-destination-dir handle quoted situations. (Andrew Ferguson)

Handle quoted current_mirror markers and clean-up the listing of
increments with quoted names. (Andrew Ferguson)

Warn if file modification time is before 1970. (Andrew Ferguson)

